# lidar_situational_graphs

./: .clang-format  .gitignore  .gitmodules  .real_mprocs.yaml  .rosinstall  .rosinstall_ros1  .rosinstall_ros2  .test_mprocs.yaml  .virtual_mprocs.yaml  404.html  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  nodelet_plugins.xml  package.xml  requirements.txt  setup.py  setup.sh  sitemap.xml
.github/workflows/: docs_build.yaml  foxy_build.yaml  humble_build.yaml  iron_build.yaml  setup.sh
1.installation/: index.html
2.datasets/: index.html
3.getting_started/: index.html
4.docker/: index.html
5.ros_related/: index.html
apps/: floor_detection_nodelet.cpp  floor_plan_node.cpp  floor_plan_nodelet.cpp  hdl_graph_slam_nodelet.cpp  plane_segmentation_nodelet.cpp  prefiltering_node.cpp  prefiltering_nodelet.cpp  room_segmentation_node.cpp  room_segmentation_nodelet.cpp  s_graphs_node.cpp  s_graphs_nodelet.cpp  scan_matching_odometry_node.cpp  scan_matching_odometry_nodelet.cpp
config/: hdl_graph_slam.yaml  hdl_prefiltering.yaml  hdl_scan_matching.yaml  prefiltering.yaml  s_graphs.yaml  scan_matching.yaml
docker/: build.sh  howtouse.md  run.sh
docker/foxy_noetic/: Dockerfile
docker/humble/: Dockerfile
docker/kinetic/: Dockerfile
docker/kinetic_llvm/: Dockerfile
docker/melodic/: Dockerfile
docker/melodic_llvm/: Dockerfile
docker/noetic/: Dockerfile
docker/noetic_llvm/: Dockerfile
docs/: 1.installation.md  2.datasets.md  3.getting_started.md  4.docker.md  5.ros_related.md  Doxyfile  index.md  name_conventions.md
imgs/: nodelets.vsdx
include/g2o/: edge_corridor_plane.hpp  edge_doorway_two_rooms.hpp  edge_infinite_room_plane.hpp  edge_loop_closure.hpp  edge_plane.hpp  edge_plane_identity.hpp  edge_plane_parallel.hpp  edge_plane_prior.hpp  edge_room.hpp  edge_room_plane.hpp  edge_se3_plane.hpp  edge_se3_point_to_plane.hpp  edge_se3_point_to_two_planes.hpp  edge_se3_priorquat.hpp  edge_se3_priorvec.hpp  edge_se3_priorxy.hpp  edge_se3_priorxyz.hpp  edge_wall_two_planes.hpp  robust_kernel_io.hpp  vertex_corridor.hpp  vertex_deviation.hpp  vertex_doorway.hpp  vertex_floor.hpp  vertex_infinite_room.hpp  vertex_room.hpp  vertex_wall.hpp
include/hdl_graph_slam/: corridors.hpp  graph_slam.hpp  keyframe.hpp  plane_segmentor.hpp  planes.hpp  rooms.hpp  ros_utils.hpp
include/s_graphs/: corridors.hpp  door_ways.hpp  floor_analyzer.hpp  floor_mapper.hpp  floors.hpp  gps_mapper.hpp  graph_publisher.hpp  graph_slam.hpp  graph_slam_BACKUP_80712.hpp  graph_slam_LOCAL_80712.hpp  graph_slam_REMOTE_80712.hpp  graph_visualizer.hpp  imu_mapper.hpp  infinite_rooms.hpp  information_matrix_calculator.hpp  keyframe.hpp  planes.hpp  (+18 more)
launch/: hdl_graph_slam_backend.launch  hdl_graph_slam_imu.launch  hdl_graph_slam_kitti.launch  hdl_graph_slam_plane_seg.launch  ros1_tf.launch  s_graphs.launch  s_graphs_400.launch  s_graphs_501.launch  s_graphs_backend.launch  s_graphs_floor_plan.launch  s_graphs_imu.launch  s_graphs_kitti.launch  s_graphs_launch.py  s_graphs_plane_seg.launch  s_graphs_room_seg.launch  s_graphs_ros2_launch.py  s_graphs_ros2_multirobot_launch.py  s_graphs_tiers.launch  s_graphs_unitree_launch.py
lidar_situational_graphs/: CMakeLists.txt  package.xml
meshes/: 1st_build_EX_114551_1st_floor.dae  1st_build_EX_114551_2nd_floor.dae  47_basement_groundtruth.pcd  47_basement_pbp.stl  47_top_floor_icra.dae  47_topfloor_pbp.stl  78_top.stl  oetrange_top_floor.pcd  oetrange_top_floor.ply  stugalux_house_floor_1.dae  stugalux_oetrange_etage_02.dae
msg/: FloorCoeffs.msg  FloorData.msg  PlaneData.msg  PlanesData.msg  PointClouds.msg  Room.msg  RoomData.msg  Rooms.msg  RoomsData.msg  ScanMatchingStatus.msg  WallData.msg  WallsData.msg
rviz/: hdl_graph_slam.rviz  s_graphs.rviz  s_graphs_ros2.rviz  s_graphs_ros2_robot1.rviz  s_graphs_ros2_robot2.rviz  s_graphs_ros2_robot3.rviz
s_graphs/: CMakeLists.txt  package.xml
s_graphs/apps/: floor_plan_node.cpp  prefiltering_node.cpp  room_segmentation_node.cpp  s_graphs_node.cpp  scan_matching_odometry_node.cpp
s_graphs/cmake/: FindCholmod.cmake
s_graphs/config/: prefiltering.yaml  s_graphs.yaml
s_graphs/include/g2o/: edge_plane.hpp  edge_plane_identity.hpp  edge_plane_prior.hpp  edge_room.hpp  edge_se3_plane.hpp  edge_se3_point_to_plane.hpp  edge_se3_priorquat.hpp  edge_se3_priorxy.hpp  edge_se3_two_planes.hpp  vertex_deviation.hpp  vertex_infinite_room.hpp  vertex_room.hpp
s_graphs/include/s_graphs/backend/: floor_mapper.hpp  graph_slam.hpp  imu_mapper.hpp  keyframe_mapper.hpp  loop_mapper.hpp  plane_mapper.hpp  room_mapper.hpp  wall_mapper.hpp
s_graphs/include/s_graphs/common/: door_ways.hpp  floors.hpp  graph_utils.hpp  infinite_rooms.hpp  information_matrix_calculator.hpp  keyframe.hpp  map_cloud_generator.hpp  nmea_sentence_parser.hpp  optimization_data.hpp  plane_utils.hpp  planes.hpp  registrations.hpp  room_utils.hpp  rooms.hpp  ros_utils.hpp
s_graphs/include/s_graphs/frontend/: floor_analyzer.hpp  loop_detector.hpp  plane_analyzer.hpp  room_analyzer.hpp
s_graphs/include/s_graphs/visualization/: graph_publisher.hpp  graph_visualizer.hpp
s_graphs/launch/: s_graphs_launch.py
s_graphs/rviz/: s_graphs_ros1.rviz
s_graphs/s_graphs/: map2odom_publisher.py
s_graphs/src/g2o/: edge_se3_point_to_plane.cpp  edge_se3_priorvec.cpp  edge_se3_priorxy.cpp  edge_se3_priorxyz.cpp  edge_se3_two_planes.cpp  edge_wall_two_planes.cpp
s_graphs/src/s_graphs/backend/: finite_room_mapper.cpp  floor_mapper.cpp  gps_mapper.cpp  graph_slam.cpp  infinite_room_mapper.cpp  plane_mapper.cpp  wall_mapper.cpp
s_graphs/src/s_graphs/common/: graph_utils.cpp  keyframe.cpp  plane_utils.cpp  registrations.cpp  room_utils.cpp  ros_utils.cpp
s_graphs/src/s_graphs/frontend/: floor_analyzer.cpp  plane_analyzer.cpp  room_analyzer.cpp
s_graphs/src/s_graphs/visualization/: graph_publisher.cpp  graph_visualizer.cpp
s_graphs/test/: testPlane.cpp  testRoom.cpp  testRoomCentreCompute.cpp
search/: search_index.json
srv/: DumpGraph.srv  LoadGraph.srv
test/: testPlane.cpp  testRoom.cpp  testRoomCentreCompute.cpp
(+1599 files in other folders)
