<?xml version="1.0"?>
<package format="3">
  <name>s_graphs</name>
  <version>2.0.0</version>
  <description>The s_graphs package</description>

  <maintainer email="hriday.bavle@gmail.com">hriday</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>ndt_omp</build_depend>
  <build_depend>fast_gicp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>graph_manager_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>ndt_omp</exec_depend>
  <exec_depend>fast_gicp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>graph_manager_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
