<?xml version="1.0"?>
<package format="3">
  <name>lidar_situational_graphs</name>
  <version>3.0.1</version>
  <description>The lidar situational graphs package for generating 3D optimizable scene graphs</description>

  <maintainer email="hriday.bavle@gmail.com">hriday</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>ndt_omp</depend>
  <depend>fast_gicp</depend>
  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geodesy</depend>
  <depend>nmea_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>libg2o</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>geographic_msgs</depend>
  <depend>message_filters</depend>
  <depend>backward_ros</depend>
  <depend>rviz_visual_tools</depend>
  <depend>libceres-dev</depend>
  <depend>situational_graphs_msgs</depend>
  <depend>situational_graphs_reasoning</depend>
  <depend>situational_graphs_reasoning_msgs</depend>

  <depend>ament_cmake_gtest</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
